Fix chart range switch on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,11 +34,11 @@
     color: #4e5862;
     border: 0;
     border-radius: 21px;
+    padding: 0;
     width: 42px;
     height: 42px;
     transition: .2s;
     background: transparent;
-    text-align: center;
 }
 
 [name="range-switch"] button:hover {
